# Routino-fpga-router

./: .gitignore  .gitmodules  Makefile  README.md
routino/: CMakeLists.txt  data.cpp  data.h  device.cpp  device.h  main.cpp  net.h  pip_graph.h  router.cpp  router.h  utils.cpp  utils.h
routino/capnp/: DeviceResources.capnp.c++  DeviceResources.capnp.h  LogicalNetlist.capnp.c++  LogicalNetlist.capnp.h  PhysicalNetlist.capnp.c++  PhysicalNetlist.capnp.h  References.capnp.c++  References.capnp.h
wirelength_analyzer/: wa.py
